feat: novas metricas roi p1 e cac
